Created /register endpoint, changed css for components and modified yml file
